--- a/myFinalProject/pages/PagesLinks.css
+++ b/myFinalProject/pages/PagesLinks.css
@@ -9,14 +9,24 @@
 
 
 .newElem{
-    position: absolute;
+    position: relative;
     font-size: 12px;
     color:black;
     text-align: center;
     background-color: red;
     width: 13px;
     height: 13px;
-    top: 0;
-    left: 243px;
     border-radius: 50%;
+    float: right;
+}
+.wrapper{
+    display: inline-block;
+}
+
+.citPos{
+    left: -20px; 
+}
+
+.dicPos{
+    left: -20px; 
 }
